# Langchain

./: pyproject.toml  requirements.txt
Genrativeai/: 2-Tools.ipynb
