[project]
name = "langchain-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.17.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "numpy>=2.2.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "transformers>=5.9.0",
]
